--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "FAKE/Samples/Grocery/GroceryShopper"]
 	path = FAKE/Samples/Grocery/GroceryShopper
-	url = git@github.com:Dragon160/GroceryShopper.git
+	url = https://github.com/Dragon160/GroceryShopper.git
